# helios-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVLOG.md  FEEDBACK.md  FIXES.md  LEARNING_PLAN.md  QUICKSTART.md  README.md  pyproject.toml  test_final.py  test_import.py  test_integration.py  test_quick.py  test_tools.py  uv.toml
.claude/: settings.json
.claude/agents/: api-researcher.md  code-architect.md  code-writer.md  test-implementer.md
.claude/commands/: git-flow.md  quick-commit.md  session-end.md  session-start.md
.claude/output-styles/: coding-style.md
docs/: architecture-review.md  architecture.md  cleanup-plan.md  deployment-strategy.md  fastmcp-testing.md  git-persistence.md  mcp-claude-config.md  pypi-publishing.md  readme-design.md  uv-project-setup.md  uvx-cli-patterns.md
docs/planning/: PRD.md
docs/samples/personas/: developer.yaml  researcher.yaml
examples/: learning_evolution.py
planning/: PLAN.md  PRD.md
samples/base/: identity.yaml
samples/personas/: coder.yaml
scripts/: README.md  cleanup.sh  dev-setup.sh  start_test_server.sh
src/helios_mcp/: __init__.py  atomic_ops.py  bootstrap.py  cli.py  config.py  git_store.py  inheritance.py  learning.py  lifecycle.py  locking.py  server.py  validation.py
tests/: __init__.py  conftest.py  test_atomic_ops.py  test_bootstrap.py  test_cli.py  test_learning.py  test_locking.py  test_server.py  test_validation.py
